# dprl

./: .gitignore  README.md  README.txt  cart2pole.py  cartpole.py  cartpole_plot.py  clustering.py  costs.py  doublependulum.py  generate_data_polecart.m  heli.py  heli_video_conv.py  learning.py  makefile  optimization_methods.py  pendubot.py  pendulum.py  pendulum_plot.py  planning.py  plot_cartpole.py  plot_heli.py  plots.py  robotarm.py  robotarm_explore-logs.ipynb  robotarm_explore.ipynb  run_script.sh  simulation.py  swimmer.py  test.py  tools.py  trajectory.txt  trajectory_back.txt  unicycle.py  wam7dofarm.py
2012-nips-workshop/: main.py  policy_view.py  tmp.py
SQP/: SQP_Inner_Loop_gen.m  SQP_Inner_Loop_gen_7DOFarm.m  SQP_Inner_Loop_gen_shooting.m  cartpole_QP_solver.mexa64  doublependulum_QP_solver.mexa64  doublependulum_QP_solver_shooting.mexa64  wam7dofarm_QP_solver.m
cartpole/: CMakeLists.txt  cartpole_QP_solver.h  cartpole_dynamics.h  cartpole_dynamics_by_hand.h  cartpole_matlab_params.m  cartpole_sqp.cpp  cost_func_squash_test.py  cython_wrappers.cpp  cython_wrappers.pyx  out  python_sqp_test.py  test_dynamics.cpp
cartpole/SQP_penalize_slack_test/: cartpole_QP_solver.c  cartpole_sqp.cpp  cartpole_sqp_solver.cpp  cartpole_sqp_solver.pyx  python_sqp_test.py
cartpole/SQP_test/: cartpole_QP_solver.c  cartpole_sqp_solver.cpp  cartpole_sqp_solver.pyx  python_sqp_test.py  setup.py
cvxgen/: proc.sh
doublependulum/: CMakeLists.txt  cost_func_squash_test.py  cython_wrappers.cpp  cython_wrappers.pyx  cython_wrappers_setup.py  doublependulum_QP_solver.h  (+9 more)
(+134 files in other folders)
